# romeo_virtual

./: README.md
romeo_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
romeo_control/launch/: .romeo_trajectory_control_full.launch.swp  romeo_position_control.launch  romeo_trajectory_control.launch  romeo_trajectory_control_full.launch
romeo_gazebo_plugin/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
romeo_gazebo_plugin/launch/: romeo_gazebo.launch  romeo_gazebo_plugin_H37.launch
